// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TeamInfo /> renders correctly 1`] = `
<Styled(Flex)>
  <styled.h5
    type="secondary"
  >
    Basic Settings
  </styled.h5>
  <styled.div
    cols={3}
  >
    <Styled(styled.div)
      margin="1rem 0"
      size="large"
    >
      Team
    </Styled(styled.div)>
    <Styled(styled.div)
      margin="1rem 0"
      size="large"
    >
      New York Mets
    </Styled(styled.div)>
    <Styled(styled.div)
      margin="1rem 0"
      size="large"
    />
  </styled.div>
  <withClickAway(Styled(styled.div))
    cols={3}
    onClickAway={[Function]}
  >
    <Styled(styled.div)
      margin="1rem 0"
      size="large"
    >
      Generate pricing updates every
    </Styled(styled.div)>
    <Styled(styled.div)
      margin="1rem 0"
      size="large"
    >
      15 Minutes
    </Styled(styled.div)>
  </withClickAway(Styled(styled.div))>
</Styled(Flex)>
`;

exports[`<TeamInfo /> renders correctly when isEditing is true 1`] = `
<Styled(Flex)>
  <styled.h5
    type="secondary"
  >
    Basic Settings
  </styled.h5>
  <styled.div
    cols={3}
  >
    <Styled(styled.div)
      margin="1rem 0"
      size="large"
    >
      Team
    </Styled(styled.div)>
    <Styled(styled.div)
      margin="1rem 0"
      size="large"
    >
      New York Mets
    </Styled(styled.div)>
    <Styled(styled.div)
      margin="1rem 0"
      size="large"
    />
  </styled.div>
  <withClickAway(Styled(styled.div))
    cols={3}
    onClickAway={[Function]}
  >
    <Styled(styled.div)
      margin="1rem 0"
      size="large"
    >
      Generate pricing updates every
    </Styled(styled.div)>
    <styled.select
      noBg={true}
      onChange={[Function]}
      size="large"
    >
      <option
        key="0"
        value={15}
      >
        15 minutes
      </option>
      <option
        key="1"
        value={30}
      >
        30 minutes
      </option>
      <option
        key="2"
        value={60}
      >
        1 hour
      </option>
      <option
        key="3"
        value={360}
      >
        6 hours
      </option>
      <option
        key="4"
        value={1440}
      >
        Daily
      </option>
    </styled.select>
    <Styled(Flex)>
      <Styled(Styled(styled.button))
        onClick={[Function]}
      >
        Save
      </Styled(Styled(styled.button))>
    </Styled(Flex)>
  </withClickAway(Styled(styled.div))>
</Styled(Flex)>
`;
